# native-aot-sm

./: .gitignore  AOT-OPTIMIZATIONS.md  README.md  WebApiProjects.sln  build-and-run.ps1  compare-performance.ps1  docker-compose.yml  memory-properties-info.md  monitor-memory.ps1  run-apis.bat  run-apis.ps1  start-aot.bat  start-standard.bat  task-manager-mapping.md  test-cold-start.ps1  timeline.mmd
.claude/: settings.local.json
AotMinimalApi/: AotMinimalApi.csproj  AotMinimalApi.http  Dockerfile  Program.cs  WeatherForecast.cs
AotMinimalApi/Properties/: launchSettings.json
RustApi/: Cargo.toml  README.md
RustApi/src/: handlers.rs  main.rs  models.rs
SpringBootGraalVM/: README.md  build-gradle.bat  build-jar-gradle.bat  build.gradle  run-gradle.bat  run-jar-gradle.bat  settings.gradle
SpringBootGraalVM/src/main/java/com/example/springbootgraalvm/: SpringBootGraalvmApplication.java
SpringBootGraalVM/src/main/java/com/example/springbootgraalvm/controller/: ApiController.java
SpringBootGraalVM/src/main/java/com/example/springbootgraalvm/model/: Address.java  BenchmarkResult.java  Company.java  User.java  UserPreferences.java
SpringBootGraalVM/src/main/resources/: application.properties
StandardMinimalApi/: Dockerfile  Program.cs  StandardMinimalApi.csproj  StandardMinimalApi.http
StandardMinimalApi/Properties/: launchSettings.json
